--- a/catalog/view/theme/logancee/css/menu.css
+++ b/catalog/view/theme/logancee/css/menu.css
@@ -1205,6 +1205,10 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 	.responsive ul.megamenu li .sub-menu .content {
 		background-image: none !important;
 	}
+
+	.sticky-header ul.megamenu > li > .sub-menu {
+		top: 0px!important;
+	}
 	
 	/* @end */
 
@@ -1229,8 +1233,10 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 	.responsive .megamenu-wrapper {
 		display: none;
 		background: #fff !important;
-		position: relative;
+		position: absolute;
 		margin-top: -2px;
+		left: -20px;
+		width: 300px;
 	}
 	
 		.responsive ul.megamenu > li {
@@ -1297,8 +1303,8 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 					}
 					
 						.responsive ul.megamenu > li.with-sub-menu .open-menu:before {
-							content: "+";
-							font-family: Verdana;
+							font: normal normal normal 14px/1 FontAwesome;
+							content: "\f107";
 							font-weight: 300;
 							font-size: 20px;
 						}
@@ -1318,10 +1324,10 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 				}
 				
 					.responsive ul.megamenu > li.active .close-menu:before {
-						content: "-";
-						font-family: Verdana;
+						content: "\f104";
+						font: normal normal normal 14px/1 FontAwesome;
 						font-weight: 300;
-						font-size: 32px;
+						font-size: 20px;
 						line-height: 1.3;
 					}
 
@@ -1430,7 +1436,7 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 	right:-50px!important;
 }
 .sticky-header ul.megamenu > li > .sub-menu{
-	top:115px!important;
+	top:115px;
 }
 .fixed-header ul.megamenu > li > .sub-menu{
 	top:60px!important;
