--- a/catalog/view/theme/logancee/css/menu.css
+++ b/catalog/view/theme/logancee/css/menu.css
@@ -122,7 +122,6 @@
 				height: 60px;
 				
 				margin: 0 10px;
-				display: inline-block;
 				font-family: Merriweather;
 				/*text-decoration: underline #eac0b2;*/
 				    border-bottom-color: #eac0b2;
@@ -626,24 +625,23 @@
 							     padding: 0px 0px 10px 0px;
 							}
 							
-							     ul.megamenu .categories-image-top img {
-							          display: block;
-							          margin: 0px auto;
-							     }
+							ul.megamenu .categories-image-top img {
+								display: block;
+								margin: 0px auto;
+							}
 							
 							ul.megamenu li .sub-menu .content .static-menu a.main-menu {
-								   font-size: 12px;
-    font-weight: bold;
-    line-height: 20px;/*
-margin-bottom: 10px;
-   padding: 10px 0; */
-    text-transform: uppercase;
-  /*border-bottom: 1px solid #ccc; */
-    color: #666;
-display: block;
-font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
-	
-}
+								font-size: 12px;
+								font-weight: 400;
+								line-height: 20px;/*
+								margin-bottom: 10px;
+								padding: 10px 0; */
+								text-transform: uppercase;
+								/*border-bottom: 1px solid #ccc; */
+								color: #666;
+								display: block;
+								font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
+							}
 							
 							     ul.megamenu li .sub-menu .content .static-menu a.main-menu:hover {
 							          color: #1a1a1a;
@@ -1022,9 +1020,9 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 	}
 	
 		.responsive ul.megamenu .sub-menu .content .row > div {
-			margin-top: 20px;
+			/*margin-top: 20px;
 			border-top: 1px solid #e6e6e6;
-			padding-top: 20px;
+			padding-top: 20px;*/
 			padding-left: 20px;
 			padding-right: 20px;
 		}
@@ -1113,8 +1111,7 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 			
 	/* @group Categories -> Hover Menu & Static Menu */
 	
-	.responsive ul.megamenu li .sub-menu .content .hover-menu .menu,
-	.responsive ul.megamenu li .sub-menu .content .static-menu .menu {
+	.responsive ul.megamenu li .sub-menu .content .hover-menu .menu {
 		position: relative;
 		margin: -20px;
 		overflow: hidden;
@@ -1134,7 +1131,7 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 	
 		.responsive ul.megamenu li .sub-menu .content .hover-menu .menu ul li,
 		.responsive ul.megamenu li .sub-menu .content .static-menu .menu ul li {
-			border-top: 1px solid #e5e5e5;
+			border-top: 0px solid #e5e5e5;
 			padding: 0px;
 		}
 		
@@ -1153,9 +1150,9 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 				padding: 0px;
 				background: #fff;
 				border: none;
-				text-align: center;
-				min-height: 60px;
-				line-height: 60px;
+				text-align: left;
+				height: 20px;
+    			line-height: 20px;
 				margin: 0px;
 			}
 			
@@ -1214,8 +1211,6 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 
 	/* @group MegaMenu Vertical */
 	
-	.responsive .vertical #menuHeading {
-	}
 	
 		.responsive .vertical ul.megamenu > li.click:before, 
 		.responsive .vertical ul.megamenu > li.hover:before {
@@ -1235,20 +1230,19 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 		background: #fff !important;
 		position: absolute;
 		margin-top: -2px;
-		left: -20px;
+		left: 0px;
 		width: 300px;
 	}
 	
 		.responsive ul.megamenu > li {
-			display: block;
+			display: inline;
 			float: none !important;
 			width: auto;
 			background: none;
 			border-top: 1px solid #e6e6e6;
 			position: relative;
 			margin: 0px;
-			height: auto !important;
-			min-height: 60px;
+			height: 45px;
 		}
 		
 			.responsive ul.megamenu > li.home, 
@@ -1260,7 +1254,7 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 				text-shadow: none;
 				background: none !important;
 				margin: 0px;
-				height: auto;
+				height: 45px;
 			}
 			
 			     .responsive ul.megamenu > li.with-sub-menu > a:after {
@@ -1282,20 +1276,17 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 					display: none;
 				}
 			
-				.responsive ul.megamenu > li:hover,
-				.responsive ul.megamenu > li.active {
-				}
 
 				.responsive ul.megamenu > li.with-sub-menu .open-menu {
 					position: absolute;
 					right: 0;
 					top: 0;
 					z-index: 10;
-					padding: 12px 17px 10px 50px;
+					padding: 20px 0px 3px 50px;
 					display: block;
 					cursor: pointer;
 					height: 60px;
-					color: #1a1a1a;
+					color: #bf8673;
 				}
 				
 					.responsive ul.megamenu > li.active .open-menu {
@@ -1317,10 +1308,10 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 					right: 0;
 					width: 85px;
 					height: 60px;
-					padding: 8px 5px 0px 40px;
+					padding: 15px 0px 0px 70px;
 					text-align: center;
 					cursor: pointer;
-					color: #1a1a1a;
+					color: #bf8673;
 				}
 				
 					.responsive ul.megamenu > li.active .close-menu:before {
@@ -1402,9 +1393,6 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 						display: none;
 					}
 
-					.responsive .visible {
-					}
-					
 						.responsive .visible > div {
 							margin: 0px !important;
 							border: none !important;
@@ -1431,7 +1419,7 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 
 
 .horizontal ul.megamenu > li > .sub-menu{
-	width:108%!important;
+	width:100%!important;
 	max-width: 139%!important;
 	right:-50px!important;
 }
@@ -1444,4 +1432,20 @@ font-family: Roboto, 'Segoe UI', Tahoma, sans-serif;
 
 .main-menu .sub-menu > div > div > div{
 	float: right!important;
+}
+
+.menu-mobile ul.megamenu > li > a{
+	text-align: left;
+}
+
+.menu-mobile li.with-sub-menu.hover.active a span {
+    border-bottom: 0px solid #eac0b2;
+}
+
+.menu-mobile .megamenu-pattern{
+	border: 1px solid #bf8673;
+}
+
+.menu-mobile .megamenu{
+	padding-left: 10px;
 }
