Bajada de hosting

--- a/catalog/view/theme/default/stylesheet/mpcheckout/checkout.css
+++ b/catalog/view/theme/default/stylesheet/mpcheckout/checkout.css
@@ -275,7 +275,7 @@
 	padding: 2px;
 }
 .mp-temp2 .mp-checkout .shoppingcart .panel, .mp-temp2 .mp-checkout .shoppingcart .panel .panel-heading, .mp-temp2 .mp-checkout .shoppingcart .panel .panel-heading i{
-	background: #D3F0EF;
+	background: #FFFFFF;
 }
 @keyframes cssload-animate {
 	17% {
