--- a/catalog/view/theme/logancee/css/bootstrap.css
+++ b/catalog/view/theme/logancee/css/bootstrap.css
@@ -4515,11 +4515,13 @@ a.thumbnail:focus {
 }
 
 .alert-danger {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
-}
+ color: #bf8673;
+    background-color: #e8ddcf;
+    /* border-color: #e8ddcf;*/
+font-style: italic;
+    font-size: 12px;
 
+}
 .alert-danger hr {
   border-top-color: #e6c1c7;
 }
